<?xml version="1.0"?>
<package format="2">
    <name>easondrone_mapping</name>
    <version>2.1.2</version>
    <description>
        A ROS package for mapping with LiDAR and D435i
    </description>

    <maintainer email="12010508@mail.sustech.edu.cn">Eason Hua</maintainer>
    <author email="eason473867143@gmail.com">Eason Yi</author>

    <license>Apache</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>easondrone_msgs</depend>
    <depend>pcl_ros</depend>
    <depend>octomap</depend>
    <depend>message_filters</depend>
    <depend>tf</depend>

    <export>
        <build_type>catkin</build_type>
    </export>
</package>
