<?xml version="1.0"?>
<package format="2">
    <name>easondrone_mapping</name>
    <version>2.1.6</version>
    <description>
        A ROS package to process PointCloud and build OctoMap
    </description>

    <maintainer email="12010508@mail.sustech.edu.cn">Eason Hua</maintainer>

    <license>Apache</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>pcl_ros</depend>
    <depend>octomap</depend>
    <depend>tf</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_sensor_msgs</depend>

    <export>
        <build_type>catkin</build_type>
    </export>
</package>
